QueryResultDataTable CSS: degrade gracefully on Safari (fixes #959)
Safari doesn't seeem to composite gradients in backgrounds correctly, which currently results into a
red glow betweeen all colmuns (whether they're overflowing, or not). This fixes that, without affecting
the working grey-linear-gradient-when-overflowing on Chrome.

--- a/client/src/common/QueryResultDataTable.module.css
+++ b/client/src/common/QueryResultDataTable.module.css
@@ -62,7 +62,7 @@
   width: 16px;
   background-image: linear-gradient(
     to right,
-    rgba(255, 0, 0, 0),
+    rgba(255, 255, 255, 0),
     rgb(250, 250, 250)
   );
 }
@@ -75,7 +75,7 @@
   width: 16px;
   background-image: linear-gradient(
     to right,
-    rgba(255, 0, 0, 0),
+    rgba(255, 255, 255, 0),
     rgb(255, 255, 255)
   );
 }
